model/slurm/job-management/job_12220122.err
Loading gpytorch/gpu-cuda-11.6/pytorch-1.11.0/1.8.0
  Loading requirement: cudnn/8.4.1 pytorch/gpu-cuda-11.6/1.11.0
  File "/raven/u/dvoss/al_pmssmwithgp/model/GPmodel1Dtest.py", line 121
    mean = self.observed_pred.mean.cpu().numpy()
    ^
IndentationError: expected an indented block
srun: error: ravg1145: task 0: Exited with exit code 1
srun: Terminating StepId=12220122.0
